<resources>
    <string name="app_name">Flutter - Movie Ratings</string>
    <string name="app_name_short">Flutter</string>
    <string name="accessibility_access_info_content">Enable accessibility in the settings screen for <b>%1$s</b> to show movie ratings in <b>%2$s</b></string>
    <string name="accessibility_settings_button_content">Open Accessibility Settings</string>
    <string name="draw_access_info_content"><b>%1$s</b> needs permission to draw over other apps to show movie ratings when you\'re browsing <b>%2$s</b></string>
    <string name="draw_settings_button_content">Open Permissions Settings</string>
	<string name="accessibility_draw_permission_launch_error">Unable to open device settings page. Please enable the permission manually. We apologize for the inconvenience.</string>
	<string name="accessibility_settings_launch_error">Unable to open accessibility settings page. Please enable the permission manually. We apologize for the inconvenience.</string>
    <string name="powered_by_api">Powered by OMDB</string>
    <string name="activate_app_cta">Activate Flutter</string>
    <string name="search_page_title">Flutter</string>
	<string name="search_page_query_hint">Search for Movies, Series, etc</string>
	<string name="search_page_api_error_content">Unable to search</string>
	<string name="search_page_add_to_collection_title">Search and add to collection</string>
	<string name="search_page_add_to_collection_cta">Add to collection</string>
    <string name="accessibility_info_app_name"><b>Flutter</b></string>
    <string name="accessibility_info_target_name"><b>Netflix, Amazon Prime Video</b></string>
    <string name="accessibility_info_page_header">Activate Flutter</string>
    <string name="accessibility_description">Turn ON the accessibility for Flutter to get movie ratings while you\'re browsing. It helps Flutter to get the name of the movie from the app.\n\nOnce you turn on the button, Android will show you a dialog which will give you info about what Flutter will get access to.\n\nFlutter also offers Text to Speech support to help people with disabilities by speaking out loud the rating of the movie.\n\nFlutter will retrieve window content and process it to find the movie title in apps (Netflix, Prime Video only) and show you the rating of the movie.\n\nIf you want to turn Flutter off for a particular app, click on <b>SETTINGS</b> in the app on top and you can enable/disable Flutter for particular apps.
    </string>
    <string name="accessibility_summary">Flutter requires accessibility permission to retrieve name of the movie to show you the ratings.</string>
    <string name="accessibility_label">Flutter Movie Ratings</string>
    <string name="settings_header">Settings</string>
    <string name="settings_info">Activate Flutter for following apps</string>
    <string name="settings_netflix">Netflix</string>
	<string name="settings_primevideo">Amazon Prime Video</string>
	<string name="settings_playmovies">Google Play Movies &amp; TV</string>
    <string name="settings_preference_update_content">Your preferences have been updated</string>
    <string name="settings_toast_duration_info">Set the duration for movie ratings to be displayed on your screen (in seconds)</string>
	<string name="settings_privacy_info">Set your privacy preferences</string>
	<string name="settings_export_data_info">You may save your data offline</string>
	<string name="settings_export_data">Export data</string>
	<string name="settings_browse_history">Save recently browsed</string>
	<string name="settings_clear_history">Clear history</string>
	<string name="settings_delete_data">Delete all data</string>
	<string name="settings_clear_history_dialog_title">Clear browsing history</string>
	<string name="settings_clear_history_dialog_content">Do you want to clear your recently browsed movies? The app can not retrieve data once it is deleted.</string>
	<string name="settings_clear_history_dialog_cta">Yes, clear history</string>
	<string name="settings_history_cleared">Your browsing history is cleared.</string>
	<string name="settings_clear_history_error">Unable to clear your browsing history.</string>
	<string name="settings_delete_data_dialog_title">Delete all your data</string>
	<string name="settings_delete_data_dialog_content">Do you want to delete all your data including your collections, movies you liked, recently browsed titles? Once deleted the app can not retrieve the data.</string>
	<string name="settings_delete_data_dialog_cta">Yes, delete everything</string>
	<string name="settings_data_deleted">Your collections, favorites, recent history has been deleted.</string>
	<string name="settings_data_delete_error">Unable to delete your data.</string>
	<string name="settings_tts_info">Flutter provides a functionality to listen to movie ratings using in-built Text to Speech feature.</string>
	<string name="settings_tts_button_text">Enable Text to Speech</string>
	<string name="settings_install_tts_dialog_title">Install Text to Speech</string>
	<string name="settings_install_tts_dialog_content">Flutter supports only US and UK English for Text to Speech as of now. To enable Text to Speech, please download Text to Speech using your device settigns.</string>
	<string name="settings_install_tts_dialog_cta">Install</string>
	<string name="settings_install_tts_dialog_later">Not now</string>
	<string name="settings_misc">Miscellaneous settings</string>
	<string name="settings_activate_flutter">Show \'Activate Flutter\'</string>
	<string name="settings_use_year_info">Flutter can try to obtain the \'release\' year of the movie to get more accurate ratings.\n\nNote: A lot of TV shows on Netflix do not have correct release year.</string>
	<string name="settings_use_year">Use \'release\' year</string>
	<string name="settings_install_tts_unsupported">It seems that Text to Speech is not supported by the device.</string>
	<string name="settings_export_data_dialog_title">Export your data</string>
	<string name="settings_export_data_dialog_content">Flutter lets you export your data in json format. You may share it with your friends, send yourself a copy for back-up or just keep it on your device.</string>
	<string name="settings_export_data_dialog_include_browsing_history">Include browsing history</string>
	<string name="settings_export_data_dialog_positive_cta">Export</string>
	<string name="settings_export_data_permission_title">Permission required</string>
	<string name="settings_export_data_permission_content">The app needs access to file storage to export your data. Would you like to grant the permission?</string>
	<string name="settings_app_section_title">Manage supported apps</string>
	<string name="settings_app_section_subtitle">Manage preferences for apps &amp; rating display duration</string>
	<string name="settings_data_and_privacy_section_title">Manage your data</string>
	<string name="settings_data_and_privacy_section_subtitle">Set your privacy preferences and import/export data</string>
	<string name="settings_tts_section_title">Configure Text to Speech</string>
	<string name="settings_tts_section_subtitle">Take advantage of Flutter\'s TTS support</string>
	<string name="settings_misc_section_title">Miscellaneous settings</string>
	<string name="settings_misc_section_subtitle">Configure settings (include year in searches, etc)</string>
	<string name="settings_app_section_page_header">Supported apps</string>
    <string name="menu_action_settings">Settings</string>
	<string name="menu_action_fav">Favorites</string>
	<string name="menu_action_search">Search</string>
	<string name="menu_action_history">Recently Browsed</string>
	<string name="menu_action_sort">Sort</string>
	<string name="menu_action_sort_alphabetically">A-Z</string>
	<string name="menu_action_sort_genre">Genre</string>
	<string name="menu_action_sort_year">Year</string>
	<string name="menu_action_info">Info</string>
	<string name="menu_action_collection">Collections</string>
	<string name="menu_action_open_imdb">Open Imdb</string>
	<string name="menu_action_add_to_collection">Add to collection</string>
    <string name="floating_rating_content">Flutter - %1$s</string>
	<string name="info_screen_content_no_accessibility">Flutter can help you decide what you want to watch today! When you\'re browsing Netflix or Amazon Prime Video, it will show you movie ratings on your screen (just like Fb Messenger chat).\n\nClick on <b>\'Activate Flutter\'</b> at the bottom to get started with Flutter!\n\nGo to <b>Settings</b> to check out what you can configure.</string>
    <string name="info_screen_content_with_accessibility">Flutter is active now. Whene you\'re browsing Netflix or Amazon Prime Video, it will show you the movie ratings on the screen.\n\nYou may also use Flutter to search for movies and TV shows and create your own collections.</string>
    <string name="info_page_share_cta">Tell your friends about Flutter</string>
    <string name="info_page_rate_cta">Rate the app on Playstore</string>
    <string name="info_page_credit_cta">Credits</string>
    <string name="info_page_test_cta">See how it works</string>
    <string name="info_page_settings_cta">Configure settings</string>
	<string name="info_page_share_content">Hey, check out Flutter Ratings! It shows movie ratings on your screen when you\'re browsing Netflix. Get the app %1s.</string>
	<string name="info_page_go_premium_cta">Support Flutter</string>
    <string name="credit_dialog_title">Credits</string>
    <string name="credit_dialog_content">Flutter uses Open Movie Database to get movie ratings.\n\nPlaystore icon used in app is made by Pixel Buddha at Flaticon.</string>
    <string name="accessibility_enabled_dialog_title">Flutter is now active!</string>
    <string name="accessibility_enabled_dialog_content">Open Netflix app on your phone and open your favorite movie or a TV show and get ratings instantly!</string>
    <string name="accessibility_enabled_open_netflix">Open Netflix</string>
    <string name="accessibility_test_title">Fight Club</string>
    <string name="accessibility_warning_content">Accessibility Permission Required</string>
    <string name="likes_page_title">Movies you like</string>
	<string name="likes_page_empty_content">It seems that you have not liked any movies yet!</string>
	<string name="likes_page_error_content">Unable to load your liked movies.\nTry again later.</string>
	<string name="movie_unliked_snackbar_content">Unliked: %1s</string>
	<string name="undo_action">Undo</string>
	<string name="movie_page_title">Movie</string>
	<string name="movie_page_direct_by">Directed by </string>
	<string name="movie_page_released_on">Released on </string>
    <string name="movie_page_actors_title">Actors</string>
    <string name="movie_page_writers_title">Writers</string>
	<string name="movie_page_plot_title">Plot</string>
	<string name="movie_page_episodes_title">Episodes</string>
	<string name="movie_page_episodes_released_on">Released on </string>
	<string name="movie_page_episodes_rated">Rated </string>
	<string name="movie_page_seasons_title">Season %1d</string>
	<string name="movie_page_collections_title">In your collections</string>
	<string name="movie_page_empty_collections">You haven\'t added this title in any collection</string>
	<string name="movie_page_add_to_collection">ADD TO COLLECTION</string>
	<string name="movie_collection_movie_exists">Title already exists in %1s collection</string>
	<string name="movie_collection_movie_added">Title added to %1s collection</string>
	<string name="movie_collection_movie_error">Unable to add title to %1s collection</string>
	<string name="movie_page_load_error">Unable to load movie info</string>
	<string name="recently_browsed_page_title">Recently browsed</string>
	<string name="recently_browsed_page_empty_content">Your browsing history is empty!</string>
	<string name="recently_browsed_page_error_content">Unable to load your browsing history.\nTry again later.</string>
</resources>