<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

	    <TextView
		    android:id="@+id/tts_info"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_tts_info"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_header_text_size"/>

	    <android.support.v7.widget.SwitchCompat
		    android:id="@+id/tts_toggle"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_text_size"
		    android:text="@string/settings_tts_button_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>

	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>


	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>

	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>

	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_misc"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_header_text_size"/>

	    <android.support.v7.widget.SwitchCompat
		    android:id="@+id/show_activate_toggle"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_text_size"
		    android:text="@string/settings_activate_flutter"
		    android:visibility="gone"
		    tools:visibility="visible"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>

	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>

	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_use_year_info"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_header_text_size"/>

	    <android.support.v7.widget.SwitchCompat
		    android:id="@+id/use_year_toggle"
		    android:padding="@dimen/gutter"
		    android:textSize="@dimen/settings_text_size"
		    android:text="@string/settings_use_year"
		    android:visibility="gone"
		    tools:visibility="visible"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>

	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#44444444"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>